Update branch name comment in workflow file

--- a/.github/workflows/convert-md-to-pdf.yml
+++ b/.github/workflows/convert-md-to-pdf.yml
@@ -2,7 +2,7 @@ name: Convert all Markdown files to PDF
 
 on:
   push:
-    branches: [ main ]  # אפשר לשנות ל־master אם זה השם שלך
+    branches: [ main ]  
 
 jobs:
   build:
