Update and rename convert-md-to-pdf.yml to md-to-pdf.yml

--- a/.github/workflows/md-to-pdf.yml
+++ b/.github/workflows/md-to-pdf.yml
@@ -6,7 +6,6 @@ on:
     paths:
       - '**.md'
       - '.github/workflows/md-to-pdf.yml'
-      - 'tools/mdpdf/**'
   workflow_dispatch: {}
 
 concurrency:
@@ -49,29 +48,53 @@ jobs:
           cd tools/mdpdf
           npm init -y
           npm install --save-exact md-to-pdf@5 github-markdown-css@5 highlight.js@11 markdown-it@14 markdown-it-footnote@4 markdown-it-emoji@3
-          # קבצי העזר (JS+CSS) יישמרו תחת tools/mdpdf
 
-      # 4) כתיבת קובץ ה-JS שממיר את כל ה-MD בתיקייה (עם RTL אוטומטי)
+      # 4) כתיבת קובץ ה-JS שממיר את כל ה-MD (כולל תיקון ESM/CJS לפלגינים + זיהוי RTL + הדגשת קוד)
       - name: Write convert.js
         run: |
           cat > tools/mdpdf/convert.js << 'EOF'
           const fs = require('fs');
           const path = require('path');
           const { mdToPdf } = require('md-to-pdf');
-          const md = require('markdown-it')({ html: true, linkify: true, typographer: true })
-            .use(require('markdown-it-footnote'))
-            .use(require('markdown-it-emoji'));
 
-          // Utility: detect Hebrew block
+          const MarkdownIt = require('markdown-it');
+          const hljs = require('highlight.js');
+
+          // פלגינים (תמיכה גם ב-ESM וגם ב-CJS)
+          const mdFootnoteMod = require('markdown-it-footnote');
+          const mdEmojiMod = require('markdown-it-emoji');
+          const asPlugin = (mod) => (typeof mod === 'function' ? mod : mod && mod.default ? mod.default : mod);
+
+          const md = new MarkdownIt({
+            html: true,
+            linkify: true,
+            typographer: true,
+            highlight: (code, lang) => {
+              try {
+                if (lang && hljs.getLanguage(lang)) {
+                  const out = hljs.highlight(code, { language: lang, ignoreIllegals: true }).value;
+                  return `<pre><code class="hljs language-${lang}">${out}</code></pre>`;
+                }
+              } catch {}
+              const esc = code
+                .replace(/&/g, '&amp;')
+                .replace(/</g, '&lt;')
+                .replace(/>/g, '&gt;');
+              return `<pre><code class="hljs">${esc}</code></pre>`;
+            }
+          })
+            .use(asPlugin(mdFootnoteMod))
+            .use(asPlugin(mdEmojiMod));
+
+          // RTL detect: Hebrew block \u0590-\u05FF
           function isRTL(content) {
             return /[\u0590-\u05FF]/.test(content);
           }
 
-          // Wrap HTML in GitHub markdown container + RTL/LTR
+          // עטיפת HTML בעיצוב GitHub + CSS מותאם + כיווניות
           function wrapHtml(bodyHtml, rtl) {
             const dirAttr = rtl ? 'dir="rtl"' : 'dir="ltr"';
-            return `
-            <!doctype html>
+            return `<!doctype html>
             <html ${dirAttr} lang="${rtl ? 'he' : 'en'}">
             <head>
               <meta charset="utf-8">
@@ -87,19 +110,20 @@ jobs:
             </html>`;
           }
 
-          // Collect all .md files (excluding CI/node_modules/venv etc.)
+          // איסוף כל קבצי ה-MD (דלג על תיקיות CI וכו')
           function collectMarkdownFiles(startDir) {
             const results = [];
             function walk(dir) {
               for (const entry of fs.readdirSync(dir, { withFileTypes: true })) {
                 const full = path.join(dir, entry.name);
                 if (entry.isDirectory()) {
-                  const skip = full.includes(path.sep + '.git' + path.sep)
-                    || full.includes(path.sep + '.github' + path.sep)
-                    || full.includes(path.sep + 'node_modules' + path.sep)
-                    || full.includes(path.sep + 'venv' + path.sep)
-                    || full.includes(path.sep + '.venv' + path.sep)
-                    || full.startsWith(path.resolve('tools/mdpdf'));
+                  const skip =
+                    full.includes(path.sep + '.git' + path.sep) ||
+                    full.includes(path.sep + '.github' + path.sep) ||
+                    full.includes(path.sep + 'node_modules' + path.sep) ||
+                    full.includes(path.sep + 'venv' + path.sep) ||
+                    full.includes(path.sep + '.venv' + path.sep) ||
+                    full.startsWith(path.resolve('tools/mdpdf'));
                   if (!skip) walk(full);
                 } else if (entry.isFile() && entry.name.toLowerCase().endsWith('.md')) {
                   results.push(full);
@@ -123,22 +147,15 @@ jobs:
                 const wrapped = wrapHtml(html, rtl);
 
                 const outPath = file.replace(/\.md$/i, '.pdf');
-                const outDir = path.dirname(outPath);
-                fs.mkdirSync(outDir, { recursive: true });
+                fs.mkdirSync(path.dirname(outPath), { recursive: true });
 
                 const result = await mdToPdf({ content: wrapped, basePath: path.dirname(file) }, {
-                  // Puppeteer print options
                   pdf_options: {
                     format: 'A4',
                     printBackground: true,
-                    margin: {
-                      top: '20mm', right: '20mm', bottom: '20mm', left: '20mm'
-                    }
+                    margin: { top: '20mm', right: '20mm', bottom: '20mm', left: '20mm' }
                   },
-                  launch_options: {
-                    // GitHub Actions sandbox sometimes needs this:
-                    args: ['--no-sandbox', '--disable-setuid-sandbox']
-                  }
+                  launch_options: { args: ['--no-sandbox', '--disable-setuid-sandbox'] }
                 });
 
                 if (result?.pdf) {
@@ -164,7 +181,7 @@ jobs:
           main().catch(err => { console.error(err); process.exit(1); });
           EOF
 
-      # 5) CSS שמקבע מראה GitHub + פונטים + תמיכה ב-RTL/LTR
+      # 5) CSS אחיד לעיצוב GitHub + RTL + הדגשת סינטקס (inline, ללא CDN)
       - name: Write mdpdf.css
         run: |
           cat > tools/mdpdf/mdpdf.css << 'EOF'
@@ -177,46 +194,40 @@ jobs:
             line-height: 1.5;
           }
 
-          /* GitHub wrapper */
-          .markdown-body {
-            box-sizing: border-box;
-            max-width: 100%;
-          }
+          .markdown-body { box-sizing: border-box; max-width: 100%; }
 
-          /* תמיכה ב-RTL */
-          html[dir="rtl"] .markdown-body {
-            direction: rtl;
-            text-align: right;
-          }
+          /* RTL */
+          html[dir="rtl"] .markdown-body { direction: rtl; text-align: right; }
           html[dir="rtl"] .markdown-body code,
           html[dir="rtl"] .markdown-body pre {
-            direction: ltr;       /* קוד תמיד LTR */
-            text-align: left;
+            direction: ltr; text-align: left;
             font-family: "DejaVu Sans Mono", "Noto Sans Mono", monospace;
           }
 
-          /* קישורים בצבע GitHubי */
-          .markdown-body a { text-decoration: none; }
-          .markdown-body a:hover { text-decoration: underline; }
-
-          /* תמונות בקנה מידה נכון */
+          /* תמונות */
           .markdown-body img { max-width: 100%; }
 
           /* טבלאות */
-          .markdown-body table {
-            border-collapse: collapse;
-            width: 100%;
-          }
-          .markdown-body th, .markdown-body td {
-            border: 1px solid #d0d7de;
-            padding: 6px 10px;
-          }
-          .markdown-body th {
-            background: #f6f8fa;
-          }
+          .markdown-body table { border-collapse: collapse; width: 100%; }
+          .markdown-body th, .markdown-body td { border: 1px solid #d0d7de; padding: 6px 10px; }
+          .markdown-body th { background: #f6f8fa; }
+
+          /* הדגשת קוד (theme בסיסי דמוי GitHub) */
+          pre code.hljs { display: block; overflow-x: auto; padding: 1em; }
+          code.hljs { padding: 0.2em 0.4em; }
+          .hljs { background: #f6f8fa; color: #24292e; }
+          .hljs-comment, .hljs-quote { color: #6a737d; font-style: italic; }
+          .hljs-keyword, .hljs-selector-tag, .hljs-subst { color: #d73a49; }
+          .hljs-literal, .hljs-number { color: #005cc5; }
+          .hljs-string, .hljs-doctag, .hljs-regexp { color: #032f62; }
+          .hljs-title, .hljs-section, .hljs-selector-id { color: #6f42c1; }
+          .hljs-type, .hljs-class .hljs-title { color: #005cc5; }
+          .hljs-attribute, .hljs-name, .hljs-variable { color: #e36209; }
+          .hljs-template-variable, .hljs-bullet, .hljs-code, .hljs-addition { color: #22863a; }
+          .hljs-selector-class, .hljs-symbol, .hljs-link, .hljs-deletion { color: #b31d28; }
           EOF
 
-      # 6) הרצה: המרה של כל קבצי ה-MD בכל הריפו ל-PDF
+      # 6) הרצה: המרה של כל קבצי ה-MD בכל הריפו ל-PDF בעזרת Chromium
       - name: Convert all Markdown files to PDF (Chromium render)
         run: |
           cd tools/mdpdf
@@ -232,7 +243,7 @@ jobs:
           if-no-files-found: error
           retention-days: 14
 
-      # 8) אופציונלי: דחיפת ה-PDFים לריפו (לא יפעיל CI שוב)
+      # 8) אופציונלי: לדחוף את ה-PDFים חזרה לריפו (לא יפעיל CI שוב)
       - name: Commit & push PDFs back to repo [optional]
         if: ${{ github.ref == 'refs/heads/main' && false }}   # החלף ל-true כדי להפעיל
         run: |
